# lung-cancer-website

./: .replit  LICENSE  README.md  app.py  main.py  model.pkl  pyproject.toml  scaler.pkl
static/: mystyle.css
templates/: about.html  bookappt.html  detect.html  footer.html  home.html  imageresult.html  nav.html  predict.html  results.html  slider.html  treat.html
